mostly fixed qr code issue on small display

--- a/public/styles/prescription_details.css
+++ b/public/styles/prescription_details.css
@@ -10,3 +10,11 @@
   margin: auto;
   width: 50%;
 }
+
+@media (max-width: 450px) {
+  #qrcode {
+    display: block;
+    margin: 0;
+    width: 50%;
+  }
+}
